homepage paddings fixed off centered pic and text

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -34,6 +34,7 @@
 }
 
 .card-body.center-image {
+  padding-top: 2em;
   justify-content: center; /* centers child elements horizontally */
   align-items: center; /* centers child elements vertically */
 }
@@ -56,7 +57,7 @@
 }
 
 .text {
-  border-right: 5px solid;
+  border-right: 3px solid;
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
